Bug 165035 - gtk3: Label for editable combobox not announced by Orca when combobox entry receives focus
Summary: gtk3: Label for editable combobox not announced by Orca when combobox entry r...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: accessibility
Depends on:
Blocks: a11y-Linux
  Show dependency treegraph
 
Reported: 2025-02-04 10:20 UTC by Michael Weghorn
Modified: 2025-02-05 20:22 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2025-02-04 10:20:42 UTC
Steps to reproduce (on Linux):

1) start the Orca screen reader
2) start LO Writer with the gtk3 VCL plugin (SAL_USE_VCLPLUGIN=gtk3)
3) open character format dialog ("Format" -> "Character")
4) go to the "Font" tab
5) press Tab key until focus moves to the "Style" editable combobox

Actual result:

In step 5, Orca just says "Editable combobox, regular", i.e. the role and the current value of the combobox when focus moves to the combobox's edit, but not the associated label ("Style"). As a consequence, it's not clear to the screen reader user what this combobox is for.

Expected result:

Orca should announce the label for the combobox as well, e.g. "Style, editable combobox, regular"

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fb0bd0e39bd8ccc618ef34bc6f830067723c1b4d
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2025-02-04 12:58:49 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d746a39ea9dc2c39cc2a7aa5d78e6c9d7563d9ca

tdf#165035 gtk3 a11y: Set relations for combobox's edit

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-02-05 20:22:00 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/421251edeead4bf18f542cad7c7513f77ed14e81

tdf#165035 gtk3 a11y: Set relations for combobox's edit

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.